# MedMemo

./: .gitignore  MIGRATION_GUIDE.md  README.md  REQUIREMENTS.md
backend/: .env.example  .gitignore  README.md  agent.py  app.py  global_agent.py  pyproject.toml
backend/api/: dependencies.py  main.py
backend/api/routers/: forms.py  health.py  ingest.py  notes.py  query.py  sessions.py
backend/src/agents/: tools.py
backend/src/context_graph/: __init__.py
backend/src/notes/: note_taker.py  supabase_store.py
backend/src/rag/: embedder.py  file_processor.py  pipeline_manager.py  weaviate_store.py
backend/supabase/migrations/: 20240101000000_create_notes_table.sql  20260328000001_users_rls_policies.sql
frontend/: .gitignore  components.json  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/components/: Chatbot.tsx  MedMemoLogo.tsx  PatientAvatar.tsx
frontend/components/ai-elements/: agent.tsx  attachments.tsx
frontend/components/chat/: ChatProvider.tsx  ChatTrigger.tsx  GlobalChat.tsx  PatientChat.tsx  ResizableChatPanel.tsx  index.ts
frontend/components/ui/: command.tsx  input-group.tsx
frontend/hooks/: useRailtracksChat.ts
frontend/lib/: api.ts  supabase.ts
mednemo-mcp-apps/: mcp-app-rag-sources.html  package.json  tsconfig.json  tsconfig.server.json  vite.config.ts
mednemo-mcp-apps/scripts/: build-apps.js
mednemo-mcp-apps/src/: document-viewer.ts  lab-charts.ts  patient-timeline.ts  rag-sources.ts  server.ts  smart-form.ts
(+16 files in other folders)
